--- a/PeopleCounter/app/src/main/res/layout/activity_main.xml
+++ b/PeopleCounter/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/almendra_bold_italic"
-        android:text="Hi, there! I am your Poeple Counter."
+        android:text="Hi, there! I am your People Counter."
         android:textColor="#A18686"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
